[package]
name = "pixelspammer"
version = "0.1.0"
edition = "2018"
authors = ["Netali <me@netali.de>"]
repository = "https://gitlab.fem-net.de/netali/pixelspammer"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"